@@ -4,7 +4,7 @@
 	<displayreplay x="0" y="0" width="100%" height="100%" fadetime="{00_menuFadetime}" shifttime="300" shifttype="bottom" shiftmode="slowed">
 		<background>
 			<area x="0" y="79%" width="100%" height="18%" layer="1">
-				<drawimage condition="not{showReplayPoster}" x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientReplayPNGT"/>
+				<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="gradientReplayPNGT"/>
 			</area>
 			<area x="0" y="74%" width="100%" height="25%" layer="2">
 				<drawimage x="0" width="{areawidth}" height="{areaheight}" imagetype="skinpart" path="shadowsReplayControl1"/>
@@ -15,10 +15,10 @@
 	</backgroundmodeonly>
 
 	<scrapercontent detached="true" delay="500" shifttime="500" shifttype="left" shiftmode="slowed" >
-		<area condition="{hasposter}" x="0" y="45%" width="15%" height="34%" layer="1">
+		<area condition="{hasposter}++{showReplayPoster}" x="0" y="45%" width="15%" height="34%" layer="1">
 			<drawimage imagetype="skinpart" path="posterReplayBG" width="{areawidth}" height="{areaheight}"/>
 		</area>
-		<area condition="{hasposter}" x="2%" y="47%" width="{areaheight}*0.29*{posterwidth}/{posterheight}" height="29%" layer="2">
+		<area condition="{hasposter}++{showReplayPoster}" x="2%" y="47%" width="{areaheight}*0.29*{posterwidth}/{posterheight}" height="29%" layer="2">
 			<drawimage imagetype="image" path="{posterpath}" align="center" valign="center" width="{areawidth}" height="{areaheight}"/>
 		</area>
 	</scrapercontent>
