@@ -4,6 +4,7 @@ shady-KISS-skin History
 - New displayreplay and displaychannel
 - Removed test- and debug-code
 - Added posterbackgrounds
+- Fixed bug in displayreplay
 
 2015-07-02:
 - Some more stuff for new design
